--- a/client/www/index.html
+++ b/client/www/index.html
@@ -2,6 +2,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self'; connect-src 'self' ws://localhost:35729; script-src 'self' http://localhost:35729">
+
+    <script data-main="js/main" src="js/vendor/requirejs/require.js"></script>
 </head>
 <body>
     <main>
